--- a/docs/modules_toolkit.dox
+++ b/docs/modules_toolkit.dox
@@ -5,7 +5,8 @@
 
 @addtogroup tkfuncs
 @{
-@fn int swmm_getCurrentDateTimeStr(char *dtimestr)
+@fn int swmm_getCurrentDateTime(int *year, int *month, int *day,
+                                int *hour, int *minute, int *second)
 @fn int swmm_getNodeResult (int index, int type, double *result)
 @fn int swmm_getLinkResult (int index, int type, double *result)
 @fn int swmm_getSubcatchResult (int index, int type, double *result)
@@ -16,11 +17,12 @@
 @fn int swmm_freeOutfallStats (SM_OutfallStats *outfallStats)
 @fn int swmm_getLinkStats (int index, SM_LinkStats *linkStats)
 @fn int swmm_getPumpStats (int index, SM_PumpStats *pumpStats)
-@fn int swmm_getSubcatchStats (int index, SM_SubcatchStats *subcatchStats)
+@fn int swmm_getSubcatchStats (int index, SM_SubcatchStats **subcatchStats)
 @fn int swmm_getSystemRoutingStats (SM_RoutingTotals *routingTot)
 @fn int swmm_getSystemRunoffStats (SM_RunoffTotals *runoffTot)
 @fn int swmm_setLinkSetting (int index, double setting)
 @fn int swmm_setNodeInflow (int index, double flowrate)
 @fn int swmm_setOutfallStage (int index, double stage)
+@fm int swmm_setGagePrecip(int index, double total_precip)
 @}
 */
