Coupling testing integrated to tests folder

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,7 @@ Lew Rossman <LRossman@cinci.rr.com>
 Laurent Courty <lrntct@gmail.com>
 Abhiram Mullapudi <abhiramm@umich.edu>
 EmNet LLC <EmNet.net>
+Velitchko Tzatchkov <vtzatchkov@yahoo.com.mx>
 
 
 Authors with Contributions in the Public Domain:
