--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@ Sam Hatchett <samhatchett@gmail.com>
 Gonzalo Peña-Castellanos <goanpeca@gmail.com>
 Katherine Ratliff <ratliff.katherine@epa.gov> (public domain)
 Abhiram Mullapudi <abhiramm@umich.edu>
+Brooke E. Mason <bemason@umich.edu>
 Jennifer Wu <jennifer.wu@live.com> (EmNet)
 Hsi-Nien Tan <hsi-nien.tan@mail.hyd.ncku.edu.tw>
 
